[package]
name = "elite-beep-beep"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
chrono = "0.4.35"
clap = { version = "4.5.3", features = ["derive"] }
colored = "2.1.0"
dirs = "5.0.1"
itertools = "0.12.1"
notify = "6.1.1"
notify-debouncer-mini = "0.4.1"
rodio = { version = "0.17.3", default-features = false }
serde = { version = "1.0.197", features = ["serde_derive", "derive"] }
serde_json = "1.0.114"
